
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int f ;
 int fclose (int ) ;
 int fname ;
 int fopen (int ,char*) ;
 int fwrite (int *,int,int,int ) ;
 int * ms0_pp ;
 int printf (char*) ;

int main()
{
 f=fopen(fname,"wb+");
 fwrite(&ms0_pp[0],1,11843,f);
 fclose(f);
 printf("Extract the archive and open PowerPoint file.!\n");
 return 0;
}
