; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_28224.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_28224.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fname = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"wb+\00", align 1
@f = common dso_local global i32 0, align 4
@ms0_pp = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [48 x i8] c"Extract the archive and open PowerPoint file.!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @fname, align 4
  %3 = call i32 @fopen(i32 %2, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i32 %3, i32* @f, align 4
  %4 = load i32*, i32** @ms0_pp, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 0
  %6 = load i32, i32* @f, align 4
  %7 = call i32 @fwrite(i32* %5, i32 1, i32 11843, i32 %6)
  %8 = load i32, i32* @f, align 4
  %9 = call i32 @fclose(i32 %8)
  %10 = call i32 @printf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @fopen(i32, i8*) #1

declare dso_local i32 @fwrite(i32*, i32, i32, i32) #1

declare dso_local i32 @fclose(i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
